fix scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,11 @@ p {
         border-bottom: #E5E7EB 1px solid;
     }
 
+    main {
+      padding: 10px;
+      flex: auto;
+    }
+
     .top {
       display: flex;
       justify-content: center;
@@ -118,7 +123,6 @@ p {
   body {
     min-height: 100vh;
     background: linear-gradient(to bottom, #0b0b2b, #1b2735 70%, #090a0f);
-    overflow: hidden;
   }
   
   .stars {
